crates/reinhardt-urls/routers-macros/tests/ui/fail/invalid_character_special.stderr
error: Invalid character '@' at position 7
       URL paths may only contain:
       - Alphanumeric characters (a-z, A-Z, 0-9)
       - Hyphens (-)
       - Underscores (_)
       - Slashes (/)
       - Dots (.)
       - Wildcards (*)
       - Curly braces for parameters ({, })
 --> tests/ui/fail/invalid_character_special.rs:5:20
  |
5 |     let _path = path!("/users/@admin/");
  |                       ^^^^^^^^^^^^^^^^
